# chip8

./: CMakeLists.txt  interface.c  interface.h  machine.c  machine.h  machine_exec.c  main.c
